[package]
name = "tls-leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argh = "0.1"
itertools = "0.10.5"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
x509-parser = "0.15"
